validation completed in student table

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -20,13 +20,13 @@
  </div>
  <br>
  <div>
-  <%=form.label :address%>
-  <%=form.text_field :address%>
+  <%=form.label :local_address%>
+  <%=form.text_field :local_address%>
  </div>
  <br>
  <div>
-  <%=form.label :contact_number%>
-  <%=form.text_field :contact_number%>
+  <%=form.label :permanent_contact_number%>
+  <%=form.text_field :permanent_contact_number%>
  </div>
  <br>
  <div>
