--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -3,8 +3,8 @@
 <p><strong>First Name:</strong><%= @student.first_name%></p>
 <p><strong>Last Name:</strong><%= @student.last_name%></p>
 <p><strong>Email:</strong><%= @student.email%></p>
-<p><strong>Address:</strong><%= @student.address%></p>
-<p><strong>Contact Number:</strong><%= @student.contact_number%></p>
-<p><strong>Date of Birth:</strong><%= @student.date_of_birth%></p>
+<p><strong>Address:</strong><%= @student.local_address%></p>
+<p><strong>Contact Number:</strong><%= @student.permanent_contact_number%></p>
+<p><strong>Date of Birth:</strong><%= @student.datee_of_birth%></p>
 
 <%= link_to 'Back', students_path %> | <%= link_to 'Edit', edit_student_path(@student)%>
