--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -17,7 +17,7 @@
   <tbody>
   	<%@students.each do |student| %>
    <tr>
-    <td><%= student.first_name %></td>
+    <td><%= student.full_name %></td>
     <td><%= student.last_name %></td>
     <td><%= student.email %></td>
     <td><%= student.local_address %></td>
