--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,10 +1,14 @@
 <p><%=notice%></p>
 <h1> Student Details </h1>
+<p><strong>Name: </strong><%= @student.full_name %></p>
+
 <p><strong>First Name:</strong><%= @student.first_name%></p>
 <p><strong>Last Name:</strong><%= @student.last_name%></p>
 <p><strong>Email:</strong><%= @student.email%></p>
 <p><strong>Address:</strong><%= @student.local_address%></p>
 <p><strong>Contact Number:</strong><%= @student.permanent_contact_number%></p>
 <p><strong>Date of Birth:</strong><%= @student.datee_of_birth%></p>
+<p><strong>Age:</strong><%= @student.age%></p>
+
 
 <%= link_to 'Back', students_path %> | <%= link_to 'Edit', edit_student_path(@student)%>
