--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -6,7 +6,7 @@
  <%end%>
  <div>
   <%=form.label :first_name%>
-  <%=form.text_field :first_name%><br>
+  <%=form.text_field :first_name, class: "form-control"%><br>
  </div>
  <br>
  <div>
