--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Course</h1>
-
-<%= render 'form', course: @course %>
-
-<%= link_to 'Show', @course %> |
-<%= link_to 'Back', courses_path %>
+<div class="col-lg-8">
+  <h1>Editing Course</h1>
+  <%= render 'form', course: @course %>
+  <%= link_to 'Show', @course, class: "btn btn-primary" %> 
+  <%= link_to 'Back', courses_path, class: "btn btn-secondary" %>
+</div>
