--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Project</h1>
-
-<%= render 'form', project: @project %>
-
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<div class="col-lg-8">
+	<h1>Edit Project</h1>
+	<%= render 'form', project: @project %>
+	<%= link_to 'Show', @project, class: "btn btn-primary" %>
+	<%= link_to 'Back', projects_path, class: "btn btn-secondary" %>
+</div>
