--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,2 +1,4 @@
-<h1>New Student</h1>
-<%= render 'form', student: @student%>
+<div class="col-lg-8">
+  <h1>New Student</h1>
+  <%= render 'form', student: @student%>
+</div>
