--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,7 @@
-<h1> Welcome to the Rails. </h1>
+<div class="col-lg-12 col-md-12">
+ <div class="jumbotron">
+  <h1 class="display-4"> Student Management </h1>
+  <p> This is our bootcamp course project.</p>
+  <a class="btn btn-primary btn-lg" href="#" role="button"> Learn More</a>
+ </div>
+</div>
