header and footer integration into our project

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,12 @@
   </head>
 
   <body>
+    <%= render 'shared/header'%>
     <div class="container">
       <div class="row">
         <%= yield %>
       </div>
     </div>
+    <%= render 'shared/footer'%>
   </body>
 </html>
