--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -21,6 +21,8 @@
       <% end %>
     </tbody>
   </table>
+  <%= paginate @courses %>
+
   <br>
   <%= link_to 'New Course', new_course_path, class: "btn btn-primary btn-lg" %>
 </div>
