--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -16,6 +16,7 @@
    <tr>
     <td><%= blog.student.email %></td>
     <td><%= blog.student.first_name %></td>
+
     <!-- <td><%#= link_to 'View', student%></td>
     <td><%#= link_to 'Edit', edit_student_path(student)%></td>
     <!-- <td><%#= link_to 'Delete', student_path(student), method: :delete %></td> -->
@@ -23,6 +24,10 @@
  -->
 
    </tr>
+
    <%end%>
   </tbody>
 </table>
+<%= paginate @blogs %>
+
+
