--- a/app/views/admin/students/index.html.erb
+++ b/app/views/admin/students/index.html.erb
@@ -1,4 +1,25 @@
 <div class="col-lg-10">
+  <%= search_form_for @q, url: :admin_students  do |form| %>
+   <div class="form-group">
+    <%= form.label :first_name %>
+    <%= form.text_field :first_name_cont, class: "form-control" %>
+   </div>
+   <div class="form-group">
+    <%= form.label :last_name %>
+    <%= form.text_field :last_name_cont, class: "form-control" %>
+   </div>
+   <div class="form-group">
+    <%= form.label :email %>
+    <%= form.text_field :email_cont, class: "form-control" %>
+   </div>
+   <div class="form-group">
+    <%= form.label :local_address %>
+    <%= form.text_field :local_address_cont, class: "form-control" %>
+   </div>
+   <div class="form-group">
+    <%= form.submit class: "btn btn-primary btn-lg" %>
+   </div>
+  <% end %>
   <p><%=notice%></p>
   <h1>Listing Students</h1>
   <%= link_to 'New Student', new_admin_student_path, class: "btn btn-primary btn-lg" %>
